# ROS1-LTS-Final

./: .clang-format  .clang-tidy  .cppcheck-suppressions.txt  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODECOV_SETUP_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_DIAGNOSIS.md  FINAL_REPORT.md  GEOMETRY_ROBUSTNESS.md  HANDOFF.md  LICENSE  PROJECT_COMPLETION_REPORT.md  README.md  REFACTOR_REPORT.md  RESTRUCTURE_PLAN.md  benchmark_results.csv  codecov.yml  remember.md
src/autodrive_msgs/: CMakeLists.txt  README.md  package.xml
src/autodrive_msgs/msg/: HUAT_Asensing.msg  HUAT_AsensingStamped.msg  HUAT_CarState.msg  HUAT_Cone.msg  HUAT_ConeDetections.msg  HUAT_ConeMap.msg  HUAT_ControlCommand.msg  HUAT_FsdCone.msg  HUAT_FsdMap.msg  HUAT_ImageObjs.msg  HUAT_ImageRect.msg  HUAT_InsP2.msg  HUAT_LocalPlanning.msg  HUAT_Logging.msg  HUAT_MsfCone.msg  HUAT_PathData.msg  HUAT_PathLimits.msg  HUAT_SimState.msg  HUAT_Stop.msg  HUAT_TimeAndAzimuth.msg  HUAT_TrackLimits.msg  HUAT_VehicleCmd.msg
src/common_msgs/: CMakeLists.txt  package.xml
src/common_msgs/msg/: Cone.msg  HUAT_ASENSING.msg  HUAT_Carstate.msg  HUAT_HighSpeedViz.msg  HUAT_PathLimits.msg  HUAT_Tracklimits.msg  HUAT_map.msg  HUAT_stop.msg  ImageObjs.msg  ImageRect.msg  fsd_map.msg  ins_p2.msg  lane_point.msg  local_planning.msg  logging_msg.msg  new_ASENSING.msg  path_data.msg  time_and_azimuth.msg  vehicle_status.msg
src/control/: CMakeLists.txt  package.xml
src/control/include/: control.h  high.hpp  line.hpp  skip.hpp  test.hpp
src/control/launch/: controler.launch
src/control/src/: PP_Car.cpp  control.cpp  main.cpp
src/control_core/: CMakeLists.txt  README.md  package.xml
src/control_core/src/: controller_base.cpp  high_controller.cpp  line_controller.cpp  skip_controller.cpp  test_controller.cpp
src/control_core/test/: test_controller.cpp
src/control_ros/: CMakeLists.txt  package.xml
src/control_ros/config/: control_accel.yaml  control_skidpad.yaml  control_track.yaml  param.yaml
src/control_ros/launch/: controler.launch
src/control_ros/nodes/: pp_car_node.cpp
src/control_ros/src/: control_node.cpp
src/fsd_common/: CMakeLists.txt  package.xml
src/fsd_launch/: CMakeLists.txt  README.md  package.xml
src/fsd_launch/config/: debug_console.conf  diagnostic_aggregator.yaml  vehicle_fleet.yaml
src/fsd_launch/launch/: acceleration.launch  autocross.launch  ebs_test.launch  skidpad.launch  trackdrive.launch
src/fsd_launch/reference/: vcu_mapping.md
src/fsd_launch/scripts/: param_snapshot.py
src/fsd_visualization/: CMakeLists.txt  package.xml
src/fsd_visualization/config/: viz_params.yaml
src/fsd_visualization/launch/: visualization.launch
src/fsd_visualization/rviz/: README.md  default.rviz  display_high.rviz  ego_perception.rviz  fsd_main.rviz  global_viz.rviz  lidar_cluster.rviz  pointcloud_only.rviz  world_planning.rviz
src/fsd_visualization/src/: cone_visualizer.cpp  fsd_viz_node.cpp  path_visualizer.cpp  triangulation_visualizer.cpp  vehicle_visualizer.cpp
src/ins/: CMakeLists.txt  package.xml
src/ins/msg/: ASENSING.msg
src/ins/scripts/: ins_bridge.py
src/lidar_cluster/: CMakeLists.txt  README.md  nodelet_lidar_cluster.xml  package.xml
src/lidar_cluster/config/: lidar_cluster_example.yaml
src/lidar_cluster/include/: distortion_adjust.hpp  imu_data.hpp  imu_subscriber.hpp  perf_stats.hpp  utility.h
src/lidar_cluster/launch/: lidar_cluster.launch
src/lidar_cluster/rviz_cfg/: globalMapOnly.rviz  lidar_cluster.rviz  lidar_cluster_c.rviz  track.rviz  track_points.rviz  trackdrive.rviz  yuansshi1.rviz
src/lidar_cluster/src/: distortion_adjust.cpp  ground_segmentation.cpp  imu_subscriber.cpp  lidar_cluster.cpp  lidar_cluster_nodelet.cc  pcdViewer.cpp  utility.cpp  visulization_marker.cpp
src/lidar_cluster/test/: confidence.cpp  test_perf_stats.cpp
src/localization_core/: CMakeLists.txt  README.md  package.xml
src/localization_core/src/: anomaly_state_machine.cpp  descriptor_relocator.cpp  factor_graph_optimizer.cpp  imu_state_estimator.cpp  location_mapper.cpp  particle_relocator.cpp
src/localization_core/test/: test_localization.cpp  test_localization_perf.cpp
src/localization_ros/: CMakeLists.txt  package.xml
src/localization_ros/config/: location.yaml  location_accel.yaml  location_common.yaml  location_skidpad.yaml  location_track.yaml  state_estimator.yaml
src/localization_ros/launch/: location.launch  location_eskf.launch
src/localization_ros/src/: location.cpp  main.cpp  state_estimator_node.cpp
src/localization_ros/test/: test_localization_perf_stats.cpp
src/perception_core/: CMakeLists.txt  README.md  package.xml
src/perception_core/benchmark/: ground_segmentation_benchmark.cpp
src/perception_core/docs/: confidence_refactor_plan.md
src/perception_core/src/: cluster_feature_extractor.cpp  cone_model_fitter.cpp  cone_tracker.cpp  confidence_scorer.cpp  distortion_adjust.cpp  distortion_adjust_v2.cpp  fast_ground_segmentation.cpp  ground_segmentation.cpp  ground_segmentation_fgs.cpp  ground_segmentation_patchworkpp.cpp  ground_segmentation_ransac.cpp  lidar_cluster_core.cpp  patchworkpp.cpp  point_cloud_pool.cpp  topology_repair.cpp  utility.cpp
src/perception_core/test/: test_cone_tracker.cpp  test_confidence_scorer.cpp  test_ground_segmentation_perf.cpp  test_point_cloud_pool.cpp
src/perception_ros/: CMakeLists.txt  README.md  nodelet_lidar_cluster.xml  package.xml
src/perception_ros/config/: lidar_accel.yaml  lidar_base.yaml  lidar_cluster_example.yaml  lidar_skidpad.yaml  lidar_track.yaml
src/perception_ros/docs/: IMU_DATA_SPECIFICATION.md
src/perception_ros/launch/: lidar_cluster.launch
src/perception_ros/nodes/: lidar_cluster_node.cpp  pcd_viewer_node.cpp
src/perception_ros/rviz_cfg/: globalMapOnly.rviz  lidar_cluster.rviz
src/perception_ros/src/: distortion_compensator.cpp  distortion_compensator_v2.cpp  guided_filter.cpp  imu_subscriber.cpp  (+2 more)
src/planning_core/: CMakeLists.txt  README.md  package.xml
src/planning_ros/: CMakeLists.txt  package.xml
src/race_rviz_viz/: CMakeLists.txt  README.md  package.xml
(+396 files in other folders)
