<?xml version="1.0"?>
<package format="2">
  <name>autodrive_msgs</name>
  <version>1.0.0</version>
  <description>Unified messages for autodrive stack</description>

  <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>
  <license>BSD-3-Clause</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <!--For loading custom messages-->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>fsd_common</depend>

  <export>
  </export>
</package>
