<?xml version="1.0"?>
<package format="2">
  <name>control_core</name>
  <version>1.0.0</version>
  <description>Core control algorithms without ROS dependencies.</description>

  <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
