<?xml version="1.0"?>
<package format="2">
  <name>control_ros</name>
  <version>0.0.0</version>
  <description>ROS adapters for control algorithms.</description>

  <maintainer email="czy@todo.todo">czy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>autodrive_msgs</depend>
  <depend>control_core</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
