<?xml version="1.0"?>
<package format="2">
  <name>control_ros</name>
  <version>1.0.0</version>
  <description>ROS adapters for control algorithms.</description>

  <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>autodrive_msgs</depend>
  <depend>fsd_common</depend>
  <depend>control_core</depend>
  <depend>diagnostic_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
