cmake_minimum_required(VERSION 3.0.2)
project(fsd_common)
find_package(catkin REQUIRED COMPONENTS roscpp diagnostic_msgs)
catkin_package(INCLUDE_DIRS include CATKIN_DEPENDS roscpp diagnostic_msgs)
include_directories(include ${catkin_INCLUDE_DIRS})
install(DIRECTORY include/${PROJECT_NAME}/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
