<?xml version="1.0"?>
<package format="2">
  <name>fsd_common</name>
  <version>1.0.0</version>
  <description>Shared utilities for FSD stack</description>
  <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>diagnostic_msgs</depend>
</package>
