<?xml version="1.0"?>
<package format="2">
    <name>ins</name>
    <version>1.0.0</version>
    <description>INS message definitions for legacy bag compatibility</description>
    <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>autodrive_msgs</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>autodrive_msgs</exec_depend>
</package>
