<?xml version="1.0"?>
<package>
	<name>perception_ros</name>
  <version>1.0.0</version>
  <description>ROS runtime package for lidar clustering (nodelet/node wrapper).</description>

  <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>


  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>autodrive_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>perception_core</build_depend>
  <test_depend>gtest</test_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>autodrive_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>perception_core</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_lidar_cluster.xml"/>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
