<?xml version="1.0"?>
<package format="2">
  <name>planning_core</name>
  <version>1.0.0</version>
  <description>Core planning algorithms without ROS dependencies.</description>

  <maintainer email="zhangjszs@foxmail.com">kerwin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-dev</build_depend>

  <exec_depend>eigen</exec_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <export>
  </export>
</package>
